@@ -26,7 +26,7 @@ import static WIP.mame.gfxobjC.*;
 import static WIP.mame.spriteC.*;
 import static WIP2.mame.ui_text.*;
 import static WIP.mame.osdependH.*;
-import static WIP.arcadeflex.libc_v2.UShortArray;
+import static common.subArrays.*;
 import static WIP.mame.memory.memory_init;
 import static WIP.mame.memory.memory_shutdown;
 import static WIP.mame.common.*;
