@@ -33,6 +33,7 @@ import static WIP2.mess.vidhrdw.nes.*;
 import static WIP.cpu.m6502.m6502H.*;
 import static old.arcadeflex.video.*;
 import static WIP.mame.drawgfx.*;
+import static common.subArrays.*;
 
 public class nes {
 
