@@ -5,7 +5,7 @@
 package WIP2.sound;
 
 import WIP.arcadeflex.libc_v2.*;
-
+import static common.subArrays.*;
 public class YM_DELTAT {
 
     public YM_DELTAT() {
