@@ -9,6 +9,7 @@ import WIP2.sound.fm_helpers.OPL_SLOT;
 import static WIP.arcadeflex.libc_v2.*;
 import static WIP2.sound.fmoplH.*;
 import static WIP2.sound.ymdeltat.*;
+import static common.subArrays.*;
 
 public class fmopl {
 
