@@ -1,6 +1,8 @@
 21/11/2018
 ==========
 -More work on commonH
+-Created common/subArrays class and moved them there
+
 
 20/11/2018
 ==========
